--- a/app/src/main/res/layout/category_item_row.xml
+++ b/app/src/main/res/layout/category_item_row.xml
@@ -9,23 +9,29 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:weightSum="50"
+        android:layout_weight="50"
         >
         <TextView
+            android:id="@+id/categoryName"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="60dp"
             android:text="Ravindu"
+            android:gravity="center"
+            android:textAlignment="center"
             />
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:weightSum="50"
+        android:layout_height="60dp"
+        android:layout_weight="50"
         >
         <TextView
+            android:id="@+id/categoryImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Ravindu"
+            android:gravity="center"
+            android:textAlignment="center"
             />
     </LinearLayout>
 
